# -

./: .gitignore  CMakeLists.txt  DEMO.md  README.md
cmake/: CompilerWarnings.cmake  FindPortAudio.cmake  FindSherpaONNX.cmake
config/: default_config.json
include/voice_input_method/: config.h  events.h  i_asr_engine.h  i_audio_capture.h  i_hotkey_manager.h  i_llm_engine.h  i_text_output.h  types.h
logs/: 01_phase1_skeleton.md  02_phase2_audio_asr.md  03_dependency_resolution.md  04_phase3_llm.md  05_phase4_output_hotkey.md  06_phase5_final.md  07_model_download.md  08_llama_qwen.md  09_portaudio.md  10_final.md  11_ui_improvements.md  12_final_ui_llm.md  13_settings_dialog.md  14_mode_toggle.md  15_mic_selector.md
scripts/: build.ps1  setup_deps.ps1
src/: CMakeLists.txt  engine_api.cpp  engine_api.h  main.cpp
src/asr/: asr_fallback.hpp  i_asr_engine.hpp  iflytek_cloud_asr.cpp  iflytek_cloud_asr.hpp  sherpa_onnx_asr.cpp  sherpa_onnx_asr.hpp
src/audio/: audio_buffer.hpp  i_audio_capture.hpp  portaudio_capture.cpp  portaudio_capture.hpp  vad.hpp
src/config/: config.cpp  config.hpp
src/core/: engine.cpp  engine.hpp  events.hpp  state_machine.cpp  state_machine.hpp  types.hpp
src/hotkey/: i_hotkey_manager.hpp  win32_hotkey.cpp  win32_hotkey.hpp
src/llm/: context_manager.hpp  i_llm_engine.hpp  llamacpp_engine.cpp  llamacpp_engine.hpp  llm_fallback.hpp  llm_types.hpp  openai_engine.cpp  openai_engine.hpp  prompt_templates.cpp  prompt_templates.hpp
src/output/: clipboard_output.cpp  clipboard_output.hpp  i_text_output.hpp  sendinput_output.cpp  sendinput_output.hpp
src/ui/: overlay_window.cpp  overlay_window.hpp  settings_dialog.cpp  settings_dialog.hpp  slim_bar.hpp  tray_icon.cpp  tray_icon.hpp
tests/: CMakeLists.txt
tests/unit/: test_config.cpp  test_context_manager.cpp  test_prompt_templates.cpp  test_state_machine.cpp
